fix: delete commented code in html, add flex-wrap for skills-list

--- a/style.css
+++ b/style.css
@@ -267,7 +267,8 @@ h2 {
 .skill-list {
   display: flex;
   justify-content: center;
-  gap: 10px
+  gap: 10px;
+  flex-wrap: wrap;
 }
 
 .skill-list .list-item {
